--- a/style.css
+++ b/style.css
@@ -8,3 +8,10 @@ h1 {
     font-style: italic;
 }
 
+.main-text-shadow {
+text-shadow: 5px 5px #558abb;
+}
+
+.font-main {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
