--- a/style.css
+++ b/style.css
@@ -15,3 +15,26 @@ text-shadow: 5px 5px #558abb;
 .font-main {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+body, html {
+    height: 100%;
+}
+
+.parallax {
+    background-image: url("background.jpg");
+
+    height: 100%;
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.font-size {
+    font-size: 36px;
+}
+
+.font-size2 {
+    font-size: 48px;
+}
